--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "bloginoobs",
+  "name": "Bloginoobs | The Beginners Hub",
   "short_name": "Bloginoobs",
   "start_url": "https://bloginoobs.blogspot.com/",
   "display": "standalone",
